--- a/FWBlog/Tpl/User/inc/daohang.html
+++ b/FWBlog/Tpl/User/inc/daohang.html
@@ -6,7 +6,7 @@
 			</a>
 			<ul class="nav nav-tabs nav-stacked fw-nav">
 			  <li><a href="/"><i class="icon-home"></i> 首页</a></li>
-			  <li><a href="{:U('Archive')}"><i class="icon-list"></i> Archive</a></li>
+			  <li><a href="/Archive/"><i class="icon-list"></i> Archive</a></li>
 			  <li><a href="/About/"><i class="icon-tags"></i> 关于</a></li>
 			</ul>
 		</div>
